chore(upgrade): housekeeping