@@ -2,22 +2,20 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 
 plugins {
     java
-    idea
-    eclipse
-    id("com.diffplug.spotless") version "6.5.0"
-    id("com.github.ben-manes.versions") version "0.42.0"
+    id("com.diffplug.spotless") version "6.18.0"
+    id("com.github.ben-manes.versions") version "0.46.0"
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.3")
 
-    testImplementation("org.assertj:assertj-core:3.22.0")
+    testImplementation("org.assertj:assertj-core:3.24.2")
 
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.3")
 }
 
 java {
@@ -25,23 +23,18 @@ java {
     targetCompatibility = JavaVersion.VERSION_11
 }
 
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
-}
-
 val test by tasks.getting(Test::class) {
-    jvmArgs("--enable-preview")
     useJUnitPlatform()
     testLogging {
         events = setOf(TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED)
     }
 }
 
-spotless {
-    java {
-        googleJavaFormat()
-    }
-    kotlinGradle {
-        ktlint()
-    }
-}
+//spotless {
+//    java {
+//        googleJavaFormat()
+//    }
+//    kotlinGradle {
+//        ktlint()
+//    }
+//}
